# normadocs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ERS_Shoppipai_SENA_COMPLETO.md  LICENSE  Makefile  README.md  convert_to_apa.py  inspect_docx.py  integration_guide.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
IDocs/: TrelloCristian.md
docs/: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  integration_guide.md  mkdocs.yml
docs/_site/: 404.html  index.html
docs/_site/changelog/: index.html
docs/_site/contributing/: index.html
docs/_site/installation/: index.html
docs/_site/reference/formats/: index.html
docs/_site/search/: search_index.json
docs/_site/standards/: index.html
docs/_site/standards/apa7/: index.html
docs/_site/standards/icontec/: index.html
docs/_site/standards/ieee/: index.html
docs/_site/troubleshooting/: index.html
docs/_site/usage/cli/: index.html
docs/src/: changelog.md  contributing.md  index.md  installation.md  troubleshooting.md
docs/src/reference/: formats.md
docs/src/standards/: apa7.md  icontec.md  ieee.md  index.md
docs/src/usage/: cli.md  library.md
examples/: README.md  example.md  example_apa.md  example_icontec.md  example_ieee.md
scripts/: create_cotizacion.py  create_cover.py  create_diagrams.py  create_gantt_fullpage.py  find_suppressions.sh  generate_mermaid_gantt.py  inspect_docx.py  verify_all_calculations.py  verify_calculations.py  verify_pdf.py
src/normadocs/: __init__.py  cli.py  cli_helpers.py  codeimage_processor.py  config.py  docx_formatter.py  languagetool_client.py  models.py  pandoc_client.py  pdf_generator.py  preprocessor.py
src/normadocs/config/: lt_ignore_words.txt
src/normadocs/formatters/: __init__.py  apa.py  base.py  icontec.py  ieee.py
src/normadocs/formatters/apa/: __init__.py  apa_cover.py  apa_figures.py  apa_formatter.py  apa_keywords.py  apa_page.py  apa_paragraphs.py  apa_styles.py  apa_tables.py
src/normadocs/standards/: __init__.py  apa7.yaml  icontec.yaml  ieee.yaml  loader.py  schema.py
src/normadocs/utils/: __init__.py  subprocess.py
src/normadocs/verifier/: __init__.py  apa_verifier.py  docx_analyzer.py  pdf_analyzer.py
src/normadocs/verifier/checks/: __init__.py  cover_page.py  figures.py  fonts.py  headings.py  margins.py  page_setup.py  paragraphs.py  references.py  running_head.py  spacing.py  tables.py
tests/: test_cli.py  test_cli_helpers.py  test_codeimage.py  test_config_strict.py  test_e2e.py  test_formatters_factory.py  test_ieee.py  test_integration.py  test_languagetool_client.py  test_models.py  test_pandoc_client.py  test_pdf_generator.py  test_preprocessor.py  test_preprocessor_strict.py  test_standards_loader.py  test_standards_schema.py
tests/unit/: test_ap_verifier.py  test_apa_cover.py  test_apa_figures.py  test_apa_keywords.py  test_apa_page.py  test_apa_paragraphs.py  test_apa_styles.py  test_apa_tables.py  test_base_formatter.py  test_docx_analyzer.py  test_icontec.py  test_verifier_models.py
tests/unit/test_checks/: test_fonts.py  test_headings.py  test_margins.py  test_paragraphs.py  test_spacing.py
tests/unit/verifier/checks/: __init__.py  test_cover_page_check.py  test_figures_check.py  test_fonts_check.py  test_headings_check.py  test_margins_check.py  test_page_setup_check.py  test_paragraphs_check.py  test_references_check.py  test_running_head_check.py  test_spacing_check.py  test_tables_check.py
