[project]
name = "normadocs"
version = "0.1.0"
description = "Herramienta profesional para convertir Markdown a DOCX/PDF cumpliendo normas (APA, etc.)."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Tu Nombre", email = "tu@email.com"},
]
keywords = ["apa", "normas", "docx", "pdf", "markdown", "academic", "writing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "python-docx>=1.1.0",
  "typer>=0.9.0",
  "click>=8.0.0",
  "weasyprint>=60.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "types-setuptools",
  "build",
  "twine",
]

[project.scripts]
normadocs = "normadocs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
