[project]
name = "normadocs"
version = "0.1.1a1"
description = "Convert Markdown to professionally formatted DOCX/PDF following academic standards (APA 7th, ICONTEC, IEEE)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Cristian Muñoz", email = "cristianmz21@users.noreply.github.com"},
]
keywords = [
  "apa", "icontec", "ieee", "academic", "writing",
  "docx", "pdf", "markdown", "formatting",
  "normas", "citation", "research", "thesis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Office/Business :: Office Suites",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/CristianMz21/normadocs"
Repository = "https://github.com/CristianMz21/normadocs"
"Bug Tracker" = "https://github.com/CristianMz21/normadocs/issues"

dependencies = [
  "python-docx>=1.1.0",
  "typer>=0.9.0",
  "click>=8.0.0",
  "weasyprint>=60.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "types-setuptools",
  "build",
  "twine",
]

[project.scripts]
normadocs = "normadocs.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
